--- a/tasks/openldap.yml
+++ b/tasks/openldap.yml
@@ -5,12 +5,12 @@
     msg: "Required version is 6.4.0, this is {{lookup('community.general.collection_version', 'community.general') }}"
     quiet: true
 
-- name: "Debian 10/11 required"
+- name: "Debian 10+ required"
   assert:
     that:
       - ansible_distribution == "Debian"
-      - ansible_distribution_major_version in [ "10", "11" ]
-    msg: "Only Debian 10/11 is supported, this is {{ ansible_distribution }} {{ ansible_distribution_major_version }}"
+      - ansible_distribution_major_version is version('10','>=')
+    msg: "Only Debian 10+ is supported, this is {{ ansible_distribution }} {{ ansible_distribution_major_version }}"
     quiet: true
 
 - name: "get package facts for detecting rsyslog and syslog-ng"
@@ -73,8 +73,6 @@
             source(s_src);
             filter(f_slapd);
             destination(d_slapd);
-            # do not write the messages into other log files
-            flags(final);
           };
       register: syslogng_slapd
     - name: "set logrotate for slapd"
