--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -53,7 +53,10 @@ ldap_memberOf_overlay: no
 # whether to configure strong password hashing
 ldap_strong_password_hashing: no
 # see "man slappw-argon2" and https://nukib.gov.cz/download/publikace/podpurne_materialy/Minimalni_pozadavky_v4_FINAL.pdf
+# WARNING - params cannot be changed on a running server, stop the server and edit values manually in
+# the file '/etc/ldap/slapd.d/cn=config/cn=module{0}.ldif'
 ldap_argon2_params: "m=65536 t=5 p=4"
+ldap_force_password_rehash: false
 
 # whether to hack the standard schema to allow empty groups
 ldap_allow_empty_groups: no
